--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,14 @@ services:
       - "8080:8080"
     depends_on:
       - redis
+    restart: always
   ui:
     build:
       context: ./ui
     ports:
       - "8081:80"
+    restart: always
   redis:
     image: redis:7-alpine
+    restart: always
     command: redis-server --save "" --appendonly no
